# ROHITHGMURALI_AutoDoc

./: .gitignore  entrypoint.py  run_swarm.py  test_args.py  test_deepagents.py  test_deepagents2.py
.github/workflows/: test.yml
autodoc-swarm/: .env.example  Dockerfile  README.md  action.yml  entrypoint.py  main.py  pyproject.toml  run_swarm.py  test_backend.py  test_integration.py
autodoc-swarm/.github/workflows/: test.yml
autodoc-swarm/autodoc_swarm/: agent.py  backend.py  llm_setup.py  prompts.py  tools.py
autodoc-swarm/dummy_repo/src/: utils.py
autodoc-swarm/dummy_repo/src/api/: routes.py
autodoc_swarm/: agent.py  backend.py  llm_setup.py  prompts.py  rate_limiter.py
documentation/: README.md  entrypoint.py.md  main.py.md  pyproject.toml.md  test_backend.py.md  test_integration.py.md
documentation/.github/workflows/: test.yml.md
documentation/autodoc_swarm/: agent.md  agent.py.md  backend.py.md  llm_setup.md  llm_setup.py.md.corrected  llm_setup.py.md.new  llm_setup.py.md.revise  llm_setup_corrected.py.md  prompts.py.md  tools.md
dummy_repo/src/api/: routes.py
